--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-dom": "18.2.0",
     "react-slideshow-image": "^4.2.0",
     "styled-components": "^5.3.6",
+    "swr": "^2.0.3",
     "typescript": "4.9.5"
   }
 }
